@startuml
skinparam linetype polyline
skinparam linetype ortho

title Attendance Page Class Dependencies

package "3_Attendance" as page {

}

package core {
    package constants {
        enum "<<enumeration>>\nIdType" {
            SINGAPORE_BLUE
            SINGAPORE_PINK
            FIN_WORK_PERMIT
            FOREIGN_PASSPORT
            OTHERS
        }

        enum "<<enumeration>>\nAttendance" {
            CONFIRMED
            UNCONFIRMED
            REJECTED
            TP_VOIDED
        }

        enum "<<enumeration>>\nSurveyLanguage" {
            ENGLISH
            MANDARIN
            MALAY
            TAMIL
        }
    }

    package attendance {
        class CourseSessionAttendance {

        }

        class UploadCourseSessionAttendance {

        }
    }

    package models {
        package attendance {
            class UploadAttendanceInfo {

            }

            UploadAttendanceInfo -up-|> AbstractRequestInfo
        }
    }

    package system {
        class Logger {
            + LOG_DIR {static}
            + LOG_FILE {static}
            + STREAM_HANDLER {static}
            + FILE_HANDLER {static}
            + FORMATTER {static}
            + __init__(str) {static}
            + debug(str)
            + info(str)
            + warning(str)
            + error(str)
        }
    }
}

package utils {
    package http_utils {
        class "Static Context" as husc {
            + handle_request(AbstractRequest, bool): None {static}
            + handle_response(Callable[[], requests.Response], bool]: None {static}
        }
    }

    package streamlit_utils {
        class "Static Context" as susc {
            + init(): None {static}
            + display_config(): None {static}
            + http_code_handler(Union[int, str]): None {static}}
            + validation_error_handler(list[str], list[str]): bool {static}
            + does_not_have_keys(): bool {static}
        }
    }
}

utils ..up[hidden]...> core

page ...> core.attendance
page ...> core.models
page ...> Logger
page ...> husc
page ...> susc
page ...> constants
@enduml